@@ -3,7 +3,6 @@ package ru.mai.lighthouse.service;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.stereotype.Service;
-import org.springframework.web.multipart.MultipartFile;
 import ru.mai.lighthouse.entity.api.batch.BatchError;
 import ru.mai.lighthouse.entity.api.batch.BatchRequest;
 import ru.mai.lighthouse.entity.api.batch.BatchResponse;
@@ -13,10 +12,7 @@ import ru.mai.lighthouse.entity.api.victim.VictimResponse;
 import ru.mai.lighthouse.mapper.VictimMapper;
 import ru.mai.lighthouse.repository.victim.VictimRepository;
 
-import java.io.IOException;
 import java.util.List;
-import java.util.Objects;
-import java.util.Optional;
 import java.util.stream.Collectors;
 import java.util.stream.IntStream;
 
@@ -26,22 +22,12 @@ import java.util.stream.IntStream;
 public class VictimService {
 
     private final VictimRepository victimRepository;
-    private final S3Service s3Service;
-    private final VictimMapper victimMapper = VictimMapper.INSTANCE;
+    private final VictimMapper victimMapper;
 
-    public VictimResponse create(VictimCreateRequest request, List<MultipartFile> photos) throws IOException {
+    public VictimResponse create(VictimCreateRequest request) {
         log.info("Создание записи о пропавшем: {} {}", request.getFirstName(), request.getLastName());
 
-        String photoUrl = null;
-        if (Objects.nonNull(photos) && !photos.isEmpty()) {
-            List<String> photoUrls = s3Service.uploadFiles(photos, "victims");
-            if (!photoUrls.isEmpty()) {
-                photoUrl = String.join(",", photoUrls);
-            }
-        }
-
-        VictimRequest victimRequest = victimMapper.toRequest(request)
-                .setPhoto(photoUrl);
+        VictimRequest victimRequest = victimMapper.toRequest(request);
 
         return victimRepository.create(victimRequest);
     }
@@ -70,12 +56,6 @@ public class VictimService {
 
     public void delete(Long id) {
         log.info("Удаление записи о пропавшем: {}", id);
-        victimRepository.getById(id)
-                .filter(victim -> Objects.nonNull(victim.getPhoto()))
-                .map(VictimResponse::getPhoto)
-                .map(photo -> photo.split(","))
-                .map(List::of)
-                .ifPresent(s3Service::deleteFiles);
         victimRepository.delete(id);
     }
 
@@ -84,7 +64,7 @@ public class VictimService {
 
         List<VictimResponse> successItems = request.getItems().stream()
                 .map(victimRepository::create)
-                .toList();
+                .collect(Collectors.toList());
 
         return new BatchResponse<VictimResponse>()
                 .setSuccessCount(successItems.size())
